Correct url of image

--- a/recipes/cheese_sandwich.html
+++ b/recipes/cheese_sandwich.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Home Page</a>
     <h1>Cheese Sandwitch</h1>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Fveg-cheese-sandwich&psig=AOvVaw3IcmbpstncKsTJHgXMHkAl&ust=1748760887834000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCAxpiRzY0DFQAAAAAdAAAAABAE" alt="This is cheese sandwitch"/>
+    <img src="https://www.allrecipes.com/thmb/NmSILttcpSbQtDuAnW--8zeok4M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11699506-avocado-toast-4x3-ea45b882fb0c454a9ca31647d4fd3c01.jpg" alt="This is cheese sandwitch"/>
     <h2>Description</h2>
     <p>The soul of cheese sandwitch is its mixture of crunchiness of its bread crust and calming essence of cheese.</p>
     <h2>Ingredients</h2>
